     * Meteor Lake to Fallenstar Lake
     * Triple Blitz to Alirok Marsh
   * minimum number of turns reduced to 1
   * new option to allow female leaders by default instead of male leaders
   * fixed a crash if the client recieves invalid utf-8
   * fixed a server side bug with could cause invalid utf-8 being send to a
     client.
   * display the era id for not installed eras in the lobby.
 * units:
   * balancing changes:
     * created undead variations for the 'bat' and 'gryphon' race
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * fixed a glitch where an item halo shifted position when zooming
   * map label length is correctly determined for multibyte characters
     and thus the limit has been reduced to 32 characters again (bug #6855)
   * now using :n in debug mode will skip past linger mode as intended
   * fix a bug with [endlevel] result=continue_no_save

Version 1.3.8:
 * campaigns:
   * Descent into Darkness
     * fixed a bug causing the growth ability of Ghast to not always work
     * fixed a bug in 'A Small Favor - Part 2' preventing one random passage
       from opening up
   * Eastern Invasion
     * new portrait for Konrad II
   * Liberty:
     * fixed the undead transformations not working in 'Unlawful Orders'
     * clarified the objectives in 'The Gray Woods'
   * Northern Rebirth
     * Colored portraits for Sisal and Rakshas
     * Fixed bug in 'Old Friend' where Tallin looses bonus HP, MP and
       experience gained from the Rod of Justice
   * Sceptre of Fire
      * fixed lava expansion in 'Caverns of Flame' not working
   * Son of the Black Eye
     * Fixed bug in 'Saving Inarix' where the blown up bridge wasn't shown
       properly (bug #9817)
   * The South Guard
     * a large number of assorted little polishing tweaks and improvements
     * a somewhat nicer-looking village flag
     * Deoran now has a lvl 3 advancement, and no special AMLA options
     * new sprites for Sir Gerrick