@@ -45,6 +45,7 @@ Version 1.3.8+svn:
     * Minimum number of turns reduced to 1.
     * Fixed a crash if the client recieves invalid utf-8.
     * Display the era id for not installed eras in the lobby.
+    * Display the scenario id for unknown scenarios in the lobby.
 
   * Unit changes and balancing
     * Created undead variations for the 'bat' and 'gryphon' race.
